# yandex-red-course

./: CMakeLists.txt  booking.cpp  ebook.cpp  group_heavy_strings.cpp  http_request.h  iterator_range.h  main.cpp  parse.cpp  parse.h  priority_collection_2.cpp  profile.h  search_server.cpp  search_server.h  server_stats.cpp  simple_vector.h  simple_vector_2.cpp  stats.h  synchronized.h  test_date  test_runner.h  text_editor.cpp  translator.cpp
last/: airport_counter.cpp  explore_key_words.cpp  matrix_sum.cpp  object_pool.cpp  simple_vector_2.h  simple_vector_copy_assignment.cpp  slow_ebook.cpp  slow_express.cpp  split_into_sentences.cpp  synchronized.cpp
last/week1/: airline_ticket.h  deque_via_two_vectors.cpp  log.cpp  max_element_if.cpp  paginator.cpp  print_values.cpp  sort_by.cpp  table.cpp  uniq_id.cpp  update_field.cpp
last/week2-3/: ebook.cpp  linked_list.cpp
last/week4/: learner.cpp  sort_students.cpp  stats.cpp  student.h  swap_sort_copy.cpp
last/week5/: concurrent_map.cpp  josephus_permutation.cpp  merge_sort_3.cpp  simple_vector.h
